# src/controllers/controller.ts
@@ -1,31 +1,114 @@
 import { Request, Response } from "express";
-import { User, Course } from "../config/env";
+import { IUser, ICourse } from "../config/env";
 import "dotenv/config";
 import {
-  serGetAllCourses,
-  serGetOneCourse,
-  serCreateCourse,
+  serUpdateUser,
+  serDeleteUser,
+  serRegisterCourse,
   serUpdateCourse,
   serDeleteCourse,
-  serNewAccessToken,
+  serShowDB,
   serLogin,
-  serLogout,
+  serNewAccesstoken,
 } from "../services/service";
-import { rmSync } from "fs";
+import { serSignUp } from "../services/service";
+
+// sign up
+export const signUp = async (
+  req: Request,
+  res: Response
+): Promise<Response | void> => {
+  try {
+    return await serSignUp(req, res);
+  } catch (error: any) {
+    return res.status(400).json({ message: error.message });
+  }
+};
 
 // login user
-export const loginUser = async (req: Request, res: Response): Promise<void> => {
+export const loginUser = async (
+  req: Request,
+  res: Response
+): Promise<Response> => {
   try {
-    const { name, password }: { name: string; password: string } = req.body;
-    const user = await serLogin(req, res, name, password);
-    res.json(user);
+    const user = await serLogin(req, res);
+    return res.status(200).json(user);
   } catch (error: any) {
-    res.json({ message: error.message });
+    return res.status(400).json({ message: error.message });
+  }
+};
+
+export const updateUser = async (
+  req: Request,
+  res: Response
+): Promise<Response | void> => {
+  try {
+    return await serUpdateUser(req, res);
+  } catch (error: any) {
+    return res.status(400).json({ message: error.message });
+  }
+};
+
+// delete user
+export const deleteUser = async (
+  req: Request,
+  res: Response
+): Promise<Response> => {
+  try {
+    return await serDeleteUser(req, res);
+  } catch (error: any) {
+    return res.status(400).json({ message: error.message });
+  }
+};
+
+// register course
+export const registerCourse = async (req: Request, res: Response) => {
+  try {
+    return await serRegisterCourse(req, res);
+  } catch (error: any) {
+    return res.status(400).json({ message: error.message });
+  }
+};
+
+// update course
+export const updateCourse = async (req: Request, res: Response) => {
+  try {
+    return await serUpdateCourse(req, res);
+  } catch (error: any) {
+    return res.status(400).json({ message: error.message });
+  }
+};
+
+// delete course
+export const deleteCourse = async (req: Request, res: Response) => {
+  try {
+    const deletedCourse = await serDeleteCourse(req, res);
+    return res.status(200).json({ message: "Course deleted succussfully" });
+  } catch (error: any) {
+    return res.status(400).json({ message: error.message });
+  }
+};
+
+// show database
+export const showDB = async (req: Request, res: Response) => {
+  try {
+    return await serShowDB(req, res);
+  } catch (error: any) {
+    return res.status(400).json({ message: error.message });
+  }
+};
+
+// new accesstoken
+export const newAccessToken = async (req: Request, res: Response) => {
+  try {
+    return await serNewAccesstoken(req, res);
+  } catch (error: any) {
+    return res.status(400).json({ message: error.message });
   }
 };
 
 // logout user
-export const logoutUser = async (req: Request, res: Response) => {
+/*export const logoutUser = async (req: Request, res: Response) => {
   try {
     const user = await serLogout(req, res);
     res.json({ message: "user logged out" });
@@ -40,7 +123,7 @@ export const showCourses = async (
   res: Response
 ): Promise<void> => {
   try {
-    const courses: Course[] | Response = await serGetAllCourses(res);
+    const courses: ICourse[] | Response = await serGetAllCourses(res);
     res.json(courses);
   } catch (error: any) {
     res.json({ message: error.message });
@@ -54,7 +137,7 @@ export const showCourse = async (
 ): Promise<void> => {
   const { name } = req.params;
   try {
-    const course: Course | Response = await serGetOneCourse(name, res);
+    const course: ICourse | Response = await serGetOneCourse(name, res);
     res.json(course);
   } catch (error: any) {
     res.json({ message: error.message });
@@ -66,10 +149,10 @@ export const createCourse = async (
   req: Request,
   res: Response
 ): Promise<void> => {
-  const info: Course = req.body;
+  const info: ICourse = req.body;
   const { name } = req.body as { name: string };
   try {
-    const course: Course | Response = await serCreateCourse(info, name, res);
+    const course: ICourse | Response = await serCreateCourse(info, name, res);
     res.json(course);
   } catch (error: any) {
     res.status(400).json({ message: error.message });
@@ -81,7 +164,7 @@ export const updateCourse = async (req: Request, res: Response) => {
   const { name } = req.params as { name: string };
   const info = req.body;
   try {
-    const course: Course | Response = await serUpdateCourse(name, info, res);
+    const course: ICourse | Response = await serUpdateCourse(name, info, res);
     res.json(course);
   } catch (error: any) {
     res.status(400).json({ message: error.message });
@@ -111,3 +194,4 @@ export const newAccessToken = async (req: Request, res: Response) => {
     res.json({ message: error.message });
   }
 };
+ */
