# src/models/models.ts
@@ -1,11 +1,20 @@
 import mongoose, { Schema, Document, Model } from "mongoose";
+import { ICourse, IUser } from "../config/env";
 
-export interface ICourse extends Document {
+/* export interface ICourse extends Document {
   name: string;
   duration: string;
   time: string;
   status: string;
 }
+
+export interface IUser extends Document {
+  name: String;
+  email: String;
+  password: String;
+  refreshtoken: String;
+  courses: Course[];
+} */
 
 const coursesSchema: Schema = new Schema({
   name: {
@@ -30,9 +39,40 @@ const coursesSchema: Schema = new Schema({
   },
 });
 
-const courses: Model<ICourse> = mongoose.model<ICourse>(
+const userSchema: Schema = new Schema<IUser>({
+  name: {
+    type: String,
+    requierd: true,
+  },
+  email: {
+    type: String,
+    required: true,
+  },
+  password: {
+    type: String,
+    requierd: true,
+  },
+  refreshtoken: {
+    type: String,
+    default: null,
+  },
+  courses: {
+    type: [
+      {
+        name: { type: String },
+        time: { type: String },
+        duration: { type: String },
+        status: { type: String },
+      },
+    ],
+    default: [],
+  },
+});
+
+export const Courses: Model<ICourse> = mongoose.model<ICourse>(
   "courses",
   coursesSchema
 );
+export const Users: Model<IUser> = mongoose.model<IUser>("users", userSchema);
 
-export default courses;
+//export default courses;
